// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceEmptyState expect to render different message if many policies exist 1`] = `
<Component>
  <Component>
    <Component
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <br />
    <Component
      size="lg"
    >
      No policies
    </Component>
    <br />
    <Component>
      <Component>
        <a
          href="insights/compliance/scappolicies"
        >
          2
           
          policies
        </a>
         
        have
         been created but 
        have
         no reports.
      </Component>
      <Component>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </Component>
      <Component>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </Component>
    </Component>
    <Component
      component="a"
      href="/insights/compliance/scappolicies"
      variant="primary"
    >
      Create new policy
    </Component>
    <Component>
      <Component
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`ComplianceEmptyState expect to render different message if one policy exists 1`] = `
<Component>
  <Component>
    <Component
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <br />
    <Component
      size="lg"
    >
      No policies
    </Component>
    <br />
    <Component>
      <Component>
        <a
          href="insights/compliance/scappolicies"
        >
          1
           
          policy
        </a>
         
        has
         been created but 
        has
         no reports.
      </Component>
      <Component>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </Component>
      <Component>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </Component>
    </Component>
    <Component
      component="a"
      href="/insights/compliance/scappolicies"
      variant="primary"
    >
      Create new policy
    </Component>
    <Component>
      <Component
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`ComplianceEmptyState expect to render without error if no policies exist 1`] = `
<Component>
  <Component>
    <Component
      icon={[Function]}
      size="xl"
      style={
        Object {
          "color": "var(--pf-global--primary-color--100)",
          "fontWeight": "500",
        }
      }
      title="Compliance"
    />
    <br />
    <Component
      size="lg"
    >
      No policies
    </Component>
    <br />
    <Component>
      <Component>
        The Compliance service uses SCAP policies to track your organization's adherence to compliance requirements.
      </Component>
      <Component>
        Get started by adding a policy, or read documentation about how to connect OpenSCAP to the Compliance service.
      </Component>
    </Component>
    <Component
      component="a"
      href="/insights/compliance/scappolicies"
      variant="primary"
    >
      Create new policy
    </Component>
    <Component>
      <Component
        component="a"
        href="https://access.redhat.com/documentation/en-us/red_hat_insights/2020-04/html/assessing_and_monitoring_security_policy_compliance_of_rhel_systems/index"
        rel="noopener noreferrer"
        target="_blank"
        variant="link"
      >
        Learn about OpenSCAP and Compliance
      </Component>
    </Component>
  </Component>
</Component>
`;
